--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1680,6 +1680,7 @@ pre
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
+    float:left;
 }
 
 .image-caption-wrapper img
