aggiustamenti per il layout FE in produzione

--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -194,7 +194,8 @@
 </script>
 <h2><%=l(:label_register)%> <%=link_to l(:label_login_with_open_id_option), signin_url if Setting.openid? %></h2>
 <br/>
-<b>Modulo di registrazione gratuita</b>
+<h2 style="color:red">Pagina in lavorazione</h2>
+<h2>Modulo di registrazione abbonamento dati utente formato 'wizard'</h2>
 <br/>
 <p class="raccomendazione">
 I campi contrassegnati da <b style="color: red;">* sono obbligatori</b><br />
