--- a/app/views/editorial/_blocco_semplice.erb
+++ b/app/views/editorial/_blocco_semplice.erb
@@ -8,7 +8,9 @@
       <div class="fs-box-body fs-blockcontent-body">
 
         <p>Contenuti qui ...</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, tellus sit amet congue vulputate, nisi erat iaculis nibh, vitae feugiat sapien ante eget mauris.</p>
+        <p style="font-size: 150%; font-weight: bold; text-align: left;" >Blocchi dal contenuto variabile
+        si può decidere di farli apparire o meno
+        si può modificarne la larghezzza e la posizione SX o SX </p>
 
         <div class="cleared"></div>
       </div>
