--- a/app/views/editorial/lavora.html.erb
+++ b/app/views/editorial/lavora.html.erb
@@ -21,6 +21,7 @@
       </a></li>
   </ul>
   <div id="tabs-1">
+    <h2 style="color:red">Pagine in costruzione</h2>
   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pulvinar metus eget augue elementum rhoncus posuere massa congue. Mauris elementum arcu vel massa malesuada ac sagittis sapien molestie. Donec dapibus bibendum feugiat. Vestibulum feugiat erat id est condimentum vitae facilisis turpis mollis. Pellentesque dapibus enim vitae sem tempor a ornare ligula porta. Pellentesque porta mi eget nibh vehicula sodales. Vivamus nec ante ipsum, malesuada varius ante. Vivamus libero ante, vehicula id auctor id, bibendum in velit. Sed a turpis nulla, nec euismod risus. Mauris vel suscipit erat. Donec ac risus a nulla imperdiet fermentum.
 
 Sed sit amet ligula nulla, ac ullamcorper dolor. Sed hendrerit consequat tellus eget pharetra. Duis ut rutrum ligula. Nullam ac libero eu enim vestibulum egestas vitae sed erat. Aliquam nisl elit, fringilla id sodales ut, tristique a purus. Donec luctus tincidunt enim vel semper. Nulla suscipit orci augue, non cursus felis. Nam ultricies, dolor ut tincidunt pellentesque, sem sapien euismod justo, vel sodales ipsum justo sit amet sem. Nunc ultrices lacinia convallis. Maecenas quis dictum ipsum. Sed pharetra elit at est euismod condimentum. Pellentesque pharetra erat id lorem vulputate sagittis. Morbi commodo dignissim dolor nec sollicitudin. Mauris bibendum rutrum tortor eget blandit. Nam semper lacus et arcu tincidunt interdum. Ut eget bibendum libero. </p>
