--- a/app/views/editorial/prova_gratis_ok.erb
+++ b/app/views/editorial/prova_gratis_ok.erb
@@ -1,4 +1,4 @@
-<div style="height: 80px;">
+<!-- div style="height: 80px;">
 <nav class="fs-menu2-nav fs-prova-gratis clearfix" xmlns="http://www.w3.org/1999/html">
 
   <span class="fs-prova-gratis-txt"><input type="text" value="Nome..."></span>
@@ -17,8 +17,9 @@
 
   </nav>
 </div>
+-->
 
 <h1>Grazie per averci scelto! </h1>
-<h2>A breve riceverai i dati per l'accesso al periodo di prova di 30 giorni all'indirizzo email o al telefono indicato </h2>
+<h2>A breve riceverai i dati per l'accesso al periodo di prova di 30 giorni all'indirizzo email da te indicato </h2>
 <h3>Non lasciare scadere i periodo di prova ... fai al più presto l'abbonamento! </h3>
-<h2>Chiedi le tariffe per un anno di abbonamento scrivendo una mail nell'area contatti! E... se ti abboni per 2 anni sconto immediato del 20%!!! </h2>
+<h2>Abbonati completando la tua registrazione , è facile basta fare click sul pulsante ABBONAMENTI e seguire la procedura! </h2>
