--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -110,7 +110,7 @@
 
       <div class="fs-shapes">
         <h1 class="fs-headline" data-left="58%">
-          <a href="#">I migliori esperti italiani in materie fiscali sportive</a>
+          <a href="#">Professionisti esperti in materie fiscali sportive</a>
         </h1>
 
 
