--- a/app/views/editorial/_tramenu_login.erb
+++ b/app/views/editorial/_tramenu_login.erb
@@ -16,7 +16,8 @@
             </li>
         <% else %>
             <li>
-              <%= link_to "==Pagina principale (FE)==", editorial_path %>
+              <%= link_to "==> Panello di controllo (FISMINE)==>", root_path %>
+              <%# link_to "== Pagina principale (FE)==", editorial_path %>
             </li>
             <li>
               <%= link_to l(:label_my_page), :controller => 'mio_profilo', :action => 'account' %>
