--- a/app/views/editorial/convegni.html.erb
+++ b/app/views/editorial/convegni.html.erb
@@ -1,8 +1,11 @@
 <h1 style="display:block">Convegni ed eventi</h1>
-<h3 style="display:block">Pagina in costruzione</h3>
+<h2 style="color:red">Pagina in costruzione</h2>
+
+<p class="fs-postcontent">questa pagina conterrà una lista di eventi passati e futuri, <br /> sotto gli eventi ci sarà un pulsante - PRENOTATI - che permette all'utente collegato una rapida riservazione .
+  <br /> &nbsp; <br /> Per dare evidenza al nuovo (prossimo) evento/convegno apparirà oltre in questa pagina anche in un blocco in prima pagina </p>
 
 <%#render :partial => 'articoli', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
 <%#sidebar a centro destra %>
 <%# render :partial => 'blocco_sidebar1' %>
 <%#sidebar a destra %>
-<%= render :partial => 'blocco_sidebar2' %>
+<%= render :partial => 'blocco_sidebar1' %>
