--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -50,7 +50,7 @@
     </div>
     <% end %>
 
-    <h1><%= page_header_title %></h1>
+    <h1 style="color:#F5BC13;"><%= page_header_title %></h1>
 
     <% if display_main_menu?(@project) %>
     <div id="main-menu">
