--- a/app/views/editorial/_tramenu_prova.erb
+++ b/app/views/editorial/_tramenu_prova.erb
@@ -20,11 +20,9 @@
           <div class="clearfix"></div>
            <span>
              Cliccando su "Leggi Gratis" acconsenti esplicitamente al trattamento dei dati personali
-             ai sensi del D.Lgs. 196/2003, leggi l' <a href="">informativa</a>
+             ai sensi del D.Lgs. 196/2003
            </span>
         </div>
       </div>
   <% end %>
 </div>
-
-
