--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -1,4 +1,4 @@
-<h1 style="display:none">__PARTIAL ARTICOLO TEASER</h1>
+<h1 style="display:block">__PARTIAL ARTICOLO TEASER</h1>
 <article class="fs-post fs-article">
   <% if articolo %>
       <div class="fs-postmetadataheader">
