--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -14,6 +14,7 @@
           <div class="fs-content-layout">
             <div class="fs-content-layout-row">
               <div class="fs-layout-cell layout-item-1">
+                <h1>test</h1>
                  <%= if articolo.immagine_url.nil?
                         '<h3>no image</h3>'
                       else
