--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -26,7 +26,7 @@
   <%= stylesheet_link_tag 'style.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.plus.css', :media => 'all' %>
   <%# javascript_include_tag "jquery/jquery-1.8.2.min.js"%>
-  <%=javascript_include_tag "jquery.js"%>
+
   <%#= javascript_include_tag "jquery/jquery-1.7.1.min.js" %>
   <%#= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
   <%# javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
@@ -40,7 +40,7 @@
 
   <%= javascript_include_tag "jquery/jquery-ui-1.9.2.custom.min.js" %>
   <%= stylesheet_link_tag 'jquery/start/jquery-ui-1.9.2.custom.min.css', :media => 'all' %>
-
+  <%=javascript_include_tag "jquery.js"%>
   <%= javascript_include_tag "script.js" %>
   <%= javascript_include_tag "script.responsive.js" %>
   <%= javascript_include_tag "jquery.carouFredSel-6.1.0.js" %>
@@ -132,7 +132,7 @@
 
     </div>
     <nav class="fs-menu2-nav clearfix">
-      <%= render_navigation(:level => 2) %>
+      <%= render_navigation(:level => 2..3, :expand_all => true) %>
     </nav>
 
     <div class="fs-layout-wrapper clearfix">
