--- a/app/views/top_sections/_form.html.erb
+++ b/app/views/top_sections/_form.html.erb
@@ -4,6 +4,6 @@
   <p><%= f.text_field :sezione_top, :label => :field_top_section, :required => true, :size => 60 %></p>
   <p><%= f.text_field :ordinamento, :label => :field_ordinamento, :size => 3 %></p>
   <p><%= f.text_field :immagine, :label => :field_immagine %></p>
-  <p><%= f.text_field :style, :label => :field_style %></p>
+  <p><%= f.text_field :key, :label => :field_key %></p>
   <p><%= f.check_box :se_visibile, :label => :field_se_visibile %></p>
 </div>
