add top_menu. Associated content. Flash for destroy

--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -7,9 +7,9 @@
 <% if @sections.any? %>
 <table class="list sections">
   <thead><tr>
-  <%= sort_header_tag('sezione', :title => l(:label_section), :style => 'width: 40%;text-align:left;')%>
-  <%= sort_header_tag('top_sezione_name', :title => l(:label_top_section), :style => 'width: 40%;text-align:left;')%>
-  <%= sort_header_tag('ordinamento', :title => l(:label_ordinamento), :style => 'color:red; width: 10%;')%>
+  <%= sort_header_tag('categoria', :title => l(:label_section), :style => 'width: 40%;text-align:left;')%>
+  <%= sort_header_tag('sezione', :title => l(:label_top_section), :style => 'width: 40%;text-align:left;')%>
+  <%= sort_header_tag('ord.', :title => l(:label_ordinamento), :style => 'color:red; width: 10%;')%>
   <%= sort_header_tag('protetto', :title => l(:label_protetto), :style => 'width: 10%;')%>
   <th style='width: 5%;'></th>
   <th style='width: 5%;'></th>
