--- a/app/views/top_sections/show.html.erb
+++ b/app/views/top_sections/show.html.erb
@@ -13,25 +13,30 @@
     <legend><%=l(:label_top_section)%></legend>
     <p>
     <% unless @top_section.sezione_top.blank? %>
-        <em><%=h @top_section.sezione_top %></em>
+        <em><%= l(:label_nome) %>: <%=h @top_section.sezione_top %></em>
         <br />
     <% end %>
     </p>
     <p>
-        <%=h @top_section.ordinamento %>
+        <%= l(:label_ordinamento) %>: <%=h @top_section.ordinamento %>
     </p>
     <p>
-        <%=h @top_section.immagine %>
+        <%= l(:label_immagine) %>: <%=h @top_section.immagine %>
+    </p>
+    <p>
+    <%= l(:label_key) %>:
     </p>
     <div class="html">
       <% unless @top_section.key.nil? %>
-        <%= @top_section.key.html_safe %>
+        <%#= @top_section.key.html_safe %>
+        <div class="wiki">
+            <%= textilizable(@top_section.key) %>
+        </div>
       <% end %>
     </div>
-<--html safe----------------------------------------------------------------------textilizable-->
-    <div class="wiki">
-        <%= textilizable(@top_section.key) %>
-    </div>
+    <p>
+        <%= l(:label_top_menu) %>: <%= link_to @top_section.top_menu.description, top_menu_path(@top_section.top_menu) %>
+    </p>
     <p>
         <%= check_box_tag l(:label_se_visibile), 1, @top_section.se_visibile, :disabled => 'disabled'  %> <%= l(:label_se_visibile) %>
     </p>
@@ -39,17 +44,17 @@
 </div>
 
 <div class="splitcontentright">
-    <fieldset class="box tabular">
-      <legend><%=l(:label_section_plural)%></legend>
-
-        <% if @top_section.sections.any? %>
-            <ul>
-            <% @top_section.sections.each do |section| %>
-                <li><%=h section %></li>
-            <% end %>
-            </ul>
-        <% else %>
-            <p class="nodata"><%= l(:label_no_data) %></p>
+  <fieldset class="box tabular">
+    <legend><%=l(:label_sections_from_top_section)%></legend>
+    <% if @top_section.sections.any? %>
+      <%= l(:label_total) %>: <%= h @top_section.sections.count %>
+      <ul>
+        <% @top_section.sections.each do |section| %>
+          <li><%=h link_to section, section %></li>
         <% end %>
-    </fieldset>
+      </ul>
+    <% else %>
+        <p class="nodata"><%= l(:label_no_data) %></p>
+    <% end %>
+  </fieldset>
 </div>
