--- a/app/views/top_menus/edit.html.erb
+++ b/app/views/top_menus/edit.html.erb
@@ -1,20 +1,6 @@
-<h1>Editing top_menu</h1>
-
-<% form_for(@top_menu) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_field :description %>
-  </p>
-  <p>
-    <%= f.label :order %><br />
-    <%= f.text_field :order %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+<h2><%= link_to l(:label_top_menu_plural), top_menus_path %> &#187; <%= h(@top_menu) %></h2>
+<% labelled_form_for (@top_menu) do |f| %>
+  <%= submit_tag l(:button_save) %>
+  <%= render :partial => 'form', :locals => { :f => f } %>
+  <%= submit_tag l(:button_update) %>
 <% end %>
-
-<%= link_to 'Show', @top_menu %> |
-<%= link_to 'Back', top_menus_path %>
