--- a/app/views/top_menus/new.html.erb
+++ b/app/views/top_menus/new.html.erb
@@ -1,19 +1,9 @@
-<h1>New top_menu</h1>
+<h2><%= link_to l(:label_top_menu_plural), top_menus_path %> &#187; <%= l(:label_top_menu_new) %></h2>
 
-<% form_for(@top_menu) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_field :description %>
-  </p>
-  <p>
-    <%= f.label :order %><br />
-    <%= f.text_field :order %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<% labelled_form_for @top_menu do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<p>
+  <%= f.submit l(:button_create) %>
+  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+</p>
 <% end %>
-
-<%= link_to 'Back', top_menus_path %>
